# scatterbin

./: README.md  pyproject.toml
src/scatterbin/: demos.ipynb  demos.py  scatterbin.py
